Revert "update to italian version"

--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -14,11 +14,8 @@ pages:
     title4:
       part1: Lausanne 2020
       part2: Rendez-vous en Janvier 2020
-    title_shop: "A vos marques, prêt : "
-    txt_shop: " SHOPPEZ !"
-    text_shop: "Tous les produits Lausanne 2020 sont désormais disponibles dans notre e–shop."
-    link_shop: "https://lausanne2020.many-ways.ch/fr/"
-    img_shop: "/images/home/FR_horizontal.png"
+    title_video: Journée Olympique 2017
+    text_video: En savoir plus
     news:
       title: News
       plus: Lire la suite
@@ -186,21 +183,9 @@ pages:
         placeholder: Ecrivez votre message ici
       envoyer: Envoyer
       thanks: Nous vous remercions de votre demande. Nous vous répondrons dans les plus brefs délais !
-  venues:
-    title: Les sites hors compétitions
-    subtitle1: Village Olympique de la Jeunesse
-    text1: Avant de devenir une résidence estudiantine dès la rentrée 2020, le Vortex accueillera, en janvier de la même année, les athlètes et comités nationaux olympiques des Jeux Olympiques de la Jeunesse Lausanne 2020. Ce bâtiment en ellipse est situé au cœur du campus de l'Université de Lausanne, partenaire institutionnel de Lausanne 2020.
-    link1: https://www.cpev.ch/immobilier/vortex
-    textlink1: Plus d'informations et webcams
-    subtitle2: Place des médailles
-    text2: La cérémonie de remise des médailles se déroulera dans le Quartier du Flon, lieu animé en plein cœur de Lausanne.
-    link2: https://flon.ch/fr/
-    textlink2: Plus d'informations
 footer:
   link:
     tokyo: "https://tokyo2020.jp/fr/"
     beijing: "http://www.beijing2022.cn/fr/"
     buenos: "http://www.buenosaires2018.com/fr/"
     pyeongChang: "https://www.pyeongchang2018.com/fr/index"
-    paris: "http://paris2024.org/fr"
-    losAngeles: "https://www.olympic.org/fr/la-2028"
