--- a/_data/de-de.yml
+++ b/_data/de-de.yml
@@ -4,21 +4,23 @@ nav:
       path: "/de/"
     - title: "News"
       path: "/de/news"
-    - title: "Wo?"
-      path: "/de/venues"
-    - title: "Sportarten"
-      path: "/de/sports"
-    - title: "Über uns"
-      path: "/de/about"
+    - title: "Die Spiele"
+      path: "/de/games"
+    - title: "Shop"
+      path: "https://lausanne2020.many-ways.ch/de/"  
+    - title: "Kontakt"
+      path: "/de/contact"
   footer:
     - title: "Home"
       path: "/de/"
     - title: "News"
       path: "/de/news"
-    - title: "Wettkampfstätten"
-      path: "/de/venues"
+    - title: "Die Spiele"
+      path: "/de/games"
     - title: "Sportarten"
       path: "/de/sports"
+    - title: "Shop"
+      path: "https://lausanne2020.many-ways.ch/de/"  
     - title: "Über uns"
       path: "/de/about"
     - title: "Jobs"
