--- a/_data/es-es.yml
+++ b/_data/es-es.yml
@@ -2,19 +2,23 @@ nav:
   header:
     - title: "Inicio"
       path: "/es/"
-    - title: "Sitios"
-      path: "/es/venues"
-    - title: "Deportes"
-      path: "/es/sports"  
-    - title: "Acerca de"
-      path: "/es/about"
+    - title: "News"
+      path: "/es/news"
+    - title: "Los Juegos"
+      path: "/es/games"
+    - title: "Shop"
+      path: "https://lausanne2020.many-ways.ch/en/"  
+    - title: "Contacto"
+      path: "/es/contact"
   footer:
     - title: "Inicio"
       path: "/es/"
-    - title: "Sitios"
-      path: "/es/venues"
+    - title: "Los Juegos"
+      path: "/es/games"
     - title: "Deportes"
       path: "/es/sports"  
+    - title: "Shop"
+      path: "https://lausanne2020.many-ways.ch/en/" 
     - title: "Acerca de"
       path: "/es/about"
     - title: "Empleo"
