--- a/_data/fr-fr.yml
+++ b/_data/fr-fr.yml
@@ -4,21 +4,23 @@ nav:
       path: "/fr/"
     - title: "News"
       path: "/fr/news"
-    - title: "Sites"
-      path: "/fr/venues"
-    - title: "Sports"
-      path: "/fr/sports"  
-    - title: "A propos"
-      path: "/fr/about"
+    - title: "Les Jeux"
+      path: "/fr/games"
+    - title: "Shop"
+      path: "https://lausanne2020.many-ways.ch/fr/"  
+    - title: "Contact"
+      path: "/fr/contact"
   footer:
     - title: "Accueil"
       path: "/fr/"
     - title: "News"
       path: "/fr/news"
-    - title: "Sites"
-      path: "/fr/venues"
+    - title: "Les Jeux"
+      path: "/fr/games"
     - title: "Sports"
       path: "/fr/sports"
+    - title: "Shop"
+      path: "https://lausanne2020.many-ways.ch/fr/" 
     - title: "A propos"
       path: "/fr/about"
     - title: "Emplois"
