--- a/_data/de-de.yml
+++ b/_data/de-de.yml
@@ -4,8 +4,10 @@ nav:
       path: "/de/"
     - title: "News"
       path: "/de/news"
-    - title: "Die Spiele"
-      path: "/de/games"
+    - title: "Wo?"
+      path: "/de/venues"
+    - title: "Sportarten"
+      path: "/de/sports"
     - title: "Shop"
       path: "https://lausanne2020.many-ways.ch/de/"  
     - title: "Kontakt"
@@ -15,8 +17,6 @@ nav:
       path: "/de/"
     - title: "News"
       path: "/de/news"
-    - title: "Die Spiele"
-      path: "/de/games"
     - title: "Sportarten"
       path: "/de/sports"
     - title: "Shop"
