--- a/_data/en-gb.yml
+++ b/_data/en-gb.yml
@@ -4,8 +4,10 @@ nav:
       path: "/en/"
     - title: "News"
       path: "/en/news"
-    - title: "The Games"
-      path: "/en/games"
+    - title: "Venues"
+      path: "/en/venues"
+    - title: "Sports"
+      path: "/en/sports"
     - title: "Shop"
       path: "https://lausanne2020.many-ways.ch/en/"  
     - title: "Contact"
@@ -15,8 +17,8 @@ nav:
       path: "/en/"
     - title: "News"
       path: "/en/news"
-    - title: "The Games"
-      path: "/en/games"
+    - title: "Venues"
+      path: "/en/venues"
     - title: "Sports"
       path: "/en/sports"
     - title: "Shop"
