--- a/_data/es-es.yml
+++ b/_data/es-es.yml
@@ -4,8 +4,10 @@ nav:
       path: "/es/"
     - title: "News"
       path: "/es/news"
-    - title: "Los Juegos"
-      path: "/es/games"
+    - title: "Sitios"
+      path: "/es/venues"
+    - title: "Deportes"
+      path: "/es/sports"
     - title: "Shop"
       path: "https://lausanne2020.many-ways.ch/en/"  
     - title: "Contacto"
@@ -13,10 +15,12 @@ nav:
   footer:
     - title: "Inicio"
       path: "/es/"
-    - title: "Los Juegos"
-      path: "/es/games"
+    - title: "News"
+      path: "/es/news"
+    - title: "Sitios"
+      path: "/es/venues"
     - title: "Deportes"
-      path: "/es/sports"  
+      path: "/es/sports" 
     - title: "Shop"
       path: "https://lausanne2020.many-ways.ch/en/" 
     - title: "Acerca de"
