--- a/_data/de-de.yml
+++ b/_data/de-de.yml
@@ -10,13 +10,15 @@ nav:
       path: "/de/sports"
     - title: "Shop"
       path: "https://lausanne2020.many-ways.ch/de/"  
-    - title: "Kontakt"
-      path: "/de/contact"
+    - title: "Über uns"
+      path: "/de/about"
   footer:
     - title: "Home"
       path: "/de/"
     - title: "News"
       path: "/de/news"
+    - title: "Wettkampfstätten"
+      path: "/de/venues"
     - title: "Sportarten"
       path: "/de/sports"
     - title: "Shop"
