--- a/_data/en-gb.yml
+++ b/_data/en-gb.yml
@@ -9,9 +9,9 @@ nav:
     - title: "Sports"
       path: "/en/sports"
     - title: "Shop"
-      path: "https://lausanne2020.many-ways.ch/en/"  
-    - title: "Contact"
-      path: "/en/contact"
+      path: "https://lausanne2020.many-ways.ch/en/"
+    - title: "About"
+      path: "/en/about"
   footer:
     - title: "Home"
       path: "/en/"
@@ -21,12 +21,12 @@ nav:
       path: "/en/venues"
     - title: "Sports"
       path: "/en/sports"
-    - title: "Shop"
-      path: "https://lausanne2020.many-ways.ch/en/"
     - title: "About"
       path: "/en/about"
     - title: "Jobs"
       path: "/en/jobs"
+    - title: "Shop"
+      path: "https://lausanne2020.many-ways.ch/en/"
     - title: "Contact"
       path: "/en/contact"
 pages:
