--- a/_data/es-es.yml
+++ b/_data/es-es.yml
@@ -2,31 +2,27 @@ nav:
   header:
     - title: "Inicio"
       path: "/es/"
-    - title: "News"
-      path: "/es/news"
     - title: "Sitios"
       path: "/es/venues"
     - title: "Deportes"
       path: "/es/sports"
     - title: "Shop"
-      path: "https://lausanne2020.many-ways.ch/en/"  
-    - title: "Contacto"
-      path: "/es/contact"
+      path: "https://lausanne2020.many-ways.ch/en/"
+    - title: "Acerca de"
+      path: "/es/about"
   footer:
     - title: "Inicio"
       path: "/es/"
-    - title: "News"
-      path: "/es/news"
     - title: "Sitios"
       path: "/es/venues"
     - title: "Deportes"
-      path: "/es/sports" 
-    - title: "Shop"
-      path: "https://lausanne2020.many-ways.ch/en/" 
+      path: "/es/sports"  
     - title: "Acerca de"
       path: "/es/about"
     - title: "Empleo"
       path: "/es/jobs"
+    - title: "Shop"
+      path: "https://lausanne2020.many-ways.ch/en/"
     - title: "Contacto"
       path: "/es/contact"
 pages:
