--- a/_data/fr-fr.yml
+++ b/_data/fr-fr.yml
@@ -4,27 +4,29 @@ nav:
       path: "/fr/"
     - title: "News"
       path: "/fr/news"
-    - title: "Les Jeux"
-      path: "/fr/games"
+    - title: "Sites"
+      path: "/fr/venues"
+    - title: "Sports"
+      path: "/fr/sports"  
     - title: "Shop"
-      path: "https://lausanne2020.many-ways.ch/fr/"  
-    - title: "Contact"
-      path: "/fr/contact"
+      path: "https://lausanne2020.many-ways.ch/fr/" 
+    - title: "A propos"
+      path: "/fr/about"
   footer:
     - title: "Accueil"
       path: "/fr/"
     - title: "News"
       path: "/fr/news"
-    - title: "Les Jeux"
-      path: "/fr/games"
+    - title: "Sites"
+      path: "/fr/venues"
     - title: "Sports"
       path: "/fr/sports"
-    - title: "Shop"
-      path: "https://lausanne2020.many-ways.ch/fr/" 
     - title: "A propos"
       path: "/fr/about"
     - title: "Emplois"
       path: "/fr/jobs"
+    - title: "Shop"
+      path: "https://lausanne2020.many-ways.ch/fr/" 
     - title: "Contact"
       path: "/fr/contact"
 pages:
