--- a/_data/it-it.yml
+++ b/_data/it-it.yml
@@ -4,27 +4,29 @@ nav:
       path: "/it/"
     - title: "News"
       path: "/it/news"
-    - title: "I Giochi"
-      path: "/it/games"
+    - title: "Sedi"
+      path: "/it/venues"
+    - title: "Sport"
+      path: "/it/sports"  
     - title: "Shop"
-      path: "https://lausanne2020.many-ways.ch/en/"  
-    - title: "Contatto"
-      path: "/it/contact"
+      path: "https://lausanne2020.many-ways.ch/en/"
+    - title: "Chi siamo"
+      path: "/it/about"
   footer:
     - title: "Home"
       path: "/it/"
     - title: "News"
       path: "/it/news"
-    - title: "I Giochi"
-      path: "/it/games"
+    - title: "Sedi"
+      path: "/it/venues"
     - title: "Sport"
       path: "/it/sports"
-    - title: "Shop"
-      path: "https://lausanne2020.many-ways.ch/en/"  
     - title: "Chi siamo"
       path: "/it/about"
     - title: "Offerte di lavoro"
       path: "/it/jobs"
+    - title: "Shop"
+      path: "https://lausanne2020.many-ways.ch/en/"
     - title: "Contatto"
       path: "/it/contact"
 pages:
