--- a/_data/de-de.yml
+++ b/_data/de-de.yml
@@ -30,6 +30,8 @@ nav:
     - title: "Kontakt"
       path: "/de/contact"
 pages:
+  index:
+    volunteers_txt: "Test"
   news:
     archive_link: Archiv
   sports:
