--- a/_data/en-gb.yml
+++ b/_data/en-gb.yml
@@ -30,6 +30,8 @@ nav:
     - title: "Contact"
       path: "/en/contact"
 pages:
+  index:
+    volunteers_txt: "Test"
   news:
     archive_link: Archive
   sports:
