--- a/_data/es-es.yml
+++ b/_data/es-es.yml
@@ -26,6 +26,8 @@ nav:
     - title: "Contacto"
       path: "/es/contact"
 pages:
+  index:
+    volunteers_txt: "Test"
   news:
     archive_link: Archivo
   sports:
