--- a/_data/fr-fr.yml
+++ b/_data/fr-fr.yml
@@ -30,6 +30,8 @@ nav:
     - title: "Contact"
       path: "/fr/contact"
 pages:
+  index:
+    volunteers_txt: "Test"
   news:
     archive_link: Archive
   sports:
