--- a/_data/it-it.yml
+++ b/_data/it-it.yml
@@ -30,6 +30,8 @@ nav:
     - title: "Contatto"
       path: "/it/contact"
 pages:
+  index:
+    volunteers_txt: "Test"
   news:
     archive_link: Archivio
   sports:
