--- a/_data/fr-fr.yml
+++ b/_data/fr-fr.yml
@@ -7,7 +7,9 @@ nav:
     - title: "Sites"
       path: "/fr/venues"
     - title: "Sports"
-      path: "/fr/sports"  
+      path: "/fr/sports" 
+    - title: "Média"
+      path: "/fr/media"
     - title: "Shop"
       path: "https://lausanne2020.many-ways.ch/fr/" 
     - title: "A propos"
@@ -21,6 +23,8 @@ nav:
       path: "/fr/venues"
     - title: "Sports"
       path: "/fr/sports"
+    - title: "Média"
+      path: "/fr/media"
     - title: "A propos"
       path: "/fr/about"
     - title: "Emplois"
