--- a/_data/fr-fr.yml
+++ b/_data/fr-fr.yml
@@ -8,8 +8,8 @@ nav:
       path: "/fr/venues"
     - title: "Sports"
       path: "/fr/sports" 
-    - title: "Média"
-      path: "/fr/media"
+    - title: "Médias"
+      path: "/fr/medias"
     - title: "Shop"
       path: "https://lausanne2020.many-ways.ch/fr/" 
     - title: "A propos"
@@ -23,8 +23,8 @@ nav:
       path: "/fr/venues"
     - title: "Sports"
       path: "/fr/sports"
-    - title: "Média"
-      path: "/fr/media"
+    - title: "Médias"
+      path: "/fr/medias"
     - title: "A propos"
       path: "/fr/about"
     - title: "Emplois"
