--- a/_data/en-gb.yml
+++ b/_data/en-gb.yml
@@ -8,6 +8,8 @@ nav:
       path: "/en/venues"
     - title: "Sports"
       path: "/en/sports"
+    - title: "Media"
+      path: "/en/medias"
     - title: "Shop"
       path: "https://lausanne2020.many-ways.ch/en/"
     - title: "About"
@@ -21,6 +23,8 @@ nav:
       path: "/en/venues"
     - title: "Sports"
       path: "/en/sports"
+    - title: "Media"
+      path: "/en/medias"
     - title: "About"
       path: "/en/about"
     - title: "Jobs"
