--- a/_data/de-de.yml
+++ b/_data/de-de.yml
@@ -8,6 +8,8 @@ nav:
       path: "/de/venues"
     - title: "Sportarten"
       path: "/de/sports"
+    - title: "Medien"
+      path: "/de/medias"
     - title: "Shop"
       path: "https://lausanne2020.many-ways.ch/de/"  
     - title: "Über uns"
@@ -21,6 +23,8 @@ nav:
       path: "/de/venues"
     - title: "Sportarten"
       path: "/de/sports"
+    - title: "Medien"
+      path: "/de/medias"
     - title: "Über uns"
       path: "/de/about"
     - title: "Jobs"
