--- a/_data/de-de.yml
+++ b/_data/de-de.yml
@@ -128,7 +128,7 @@ footer:
   link:
     tokyo: "https://tokyo2020.jp/en/"
     beijing: "http://www.beijing2022.cn/en/"
-    buenos: "http://www.buenosaires2018.com/en/"
+    buenos: "https://www.buenosaires2018.com/home"
     pyeongChang: "https://www.pyeongchang2018.com/en/index"
     paris: "http://paris2024.org/en"
     losAngeles: "https://www.olympic.org/la-2028"
