--- a/_data/fr-fr.yml
+++ b/_data/fr-fr.yml
@@ -132,7 +132,7 @@ footer:
   link:
     tokyo: "https://tokyo2020.jp/fr/"
     beijing: "http://www.beijing2022.cn/fr/"
-    buenos: "http://www.buenosaires2018.com/fr/"
+    buenos: "https://www.buenosaires2018.com/home"
     pyeongChang: "https://www.pyeongchang2018.com/fr/index"
     paris: "http://paris2024.org/fr"
     losAngeles: "https://www.olympic.org/fr/la-2028"
