--- a/_data/it-it.yml
+++ b/_data/it-it.yml
@@ -124,5 +124,5 @@ footer:
   link:
     tokyo: "https://tokyo2020.jp/fr/"
     beijing: "http://www.beijing2022.cn/fr/"
-    buenos: "http://www.buenosaires2018.com/fr/"
+    buenos: "https://www.buenosaires2018.com/home"
     pyeongChang: "https://www.pyeongchang2018.com/fr/index"
