--- a/_data/fr-fr.yml
+++ b/_data/fr-fr.yml
@@ -27,7 +27,7 @@ nav:
       path: "/fr/sports"
     - title: "Médias"
       path: "/fr/medias"
-    - title: "PME"
+    - title: "Fan'attitude"
       path: "pme"
     - title: "FAQ"
       path: "/fr/faq"
