--- a/_data/fr-fr.yml
+++ b/_data/fr-fr.yml
@@ -27,6 +27,8 @@ nav:
       path: "/fr/sports"
     - title: "Médias"
       path: "/fr/medias"
+    - title: "Fan'attitude"
+      path: "/fr/pme"
     - title: "FAQ"
       path: "/fr/faq"
     - title: "A propos"
