--- a/_data/de-de.yml
+++ b/_data/de-de.yml
@@ -11,7 +11,9 @@ nav:
     - title: "Medien"
       path: "/de/medias"
     - title: "Shop"
-      path: "https://lausanne2020.many-ways.ch/de/"  
+      path: "https://lausanne2020.many-ways.ch/de/"
+    - title: "FAQ"
+      path: "/de/faq"  
     - title: "Über uns"
       path: "/de/about"
   footer:
@@ -25,6 +27,8 @@ nav:
       path: "/de/sports"
     - title: "Medien"
       path: "/de/medias"
+    - title: "FAQ"
+      path: "/de/faq"
     - title: "Über uns"
       path: "/de/about"
     - title: "Jobs"
